# series-renamer

./: .gitignore  README.md  makefile  pyproject.toml  sync-version.py
series_renamer/: parser.py  renamer.py  scanner.py  stopwords.py  utils.py  version.py
tests/: test_scanner.py  test_version.py
