[tool.poetry]
name = "series-renamer"
version = "0.1.0"
description = ""
authors = ["fsadannn <fsadannn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
