[tool.poetry]
name = "series-renamer"
version = "0.2.1"
description = ""
authors = ["fsadannn <fsadannn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.3"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
tomli = "^2.0.1"
xeger = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
